maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:10: error: '=>' expected but '=' found.
    case 1 = droite()
           ^